llvm/test/MC/EraVM/asm-parser/ptr-instructions-errors.s
; RUN: not llvm-mc -triple eravm -o - < %s 2>&1 > %t.stdout | FileCheck %s
; RUN: FileCheck --check-prefix=STDOUT %s < %t.stdout

; STDOUT:     .text
; STDOUT-NOT: {{.+}}

; operands: only accept either register or stack input as the pointer operand
;           (only affects the non-swapped version).
; Note that the step 2 of the semantic described by the spec for pointer
; modification instructions is "Ensure the op_1 is tagged as a pointer and
; op_2 is not tagged as a pointer. Otherwise panic" and that only registers
; and stack can be tagged.
  ptr.add       42, r2, r3
  ptr.add       code[r1 + 1], r2, r3
  ptr.add       42, r2, stack[r3 + 1]
  ptr.add       code[r1 + 1], r2, stack[r3 + 1]
  ptr.add       42, r2, stack-[r3 + 1]
  ptr.add       code[r1 + 1], r2, stack-[r3 + 1]
  ptr.add       42, r2, stack+=[r3 + 1]
  ptr.add       code[r1 + 1], r2, stack+=[r3 + 1]

; briefly check the three other instructions
  ptr.sub       42, r2, r3
  ptr.sub       code[r1 + 1], r2, r3
  ptr.shrink    42, r2, r3
  ptr.shrink    code[r1 + 1], r2, r3
  ptr.pack      42, r2, r3
  ptr.pack      code[r1 + 1], r2, r3


; COM: Autogenerated checks below, see README.md.
; CHECK:       <stdin>:{{[0-9]+}}:17: error: cannot parse operand
; CHECK-NEXT:    ptr.add       42, r2, r3
; CHECK-NEXT:                  ^
; CHECK:       <stdin>:{{[0-9]+}}:17: error: cannot parse operand
; CHECK-NEXT:    ptr.add       code[r1 + 1], r2, r3
; CHECK-NEXT:                  ^
; CHECK:       <stdin>:{{[0-9]+}}:17: error: cannot parse operand
; CHECK-NEXT:    ptr.add       42, r2, stack[r3 + 1]
; CHECK-NEXT:                  ^
; CHECK:       <stdin>:{{[0-9]+}}:17: error: cannot parse operand
; CHECK-NEXT:    ptr.add       code[r1 + 1], r2, stack[r3 + 1]
; CHECK-NEXT:                  ^
; CHECK:       <stdin>:{{[0-9]+}}:17: error: cannot parse operand
; CHECK-NEXT:    ptr.add       42, r2, stack-[r3 + 1]
; CHECK-NEXT:                  ^
; CHECK:       <stdin>:{{[0-9]+}}:17: error: cannot parse operand
; CHECK-NEXT:    ptr.add       code[r1 + 1], r2, stack-[r3 + 1]
; CHECK-NEXT:                  ^
; CHECK:       <stdin>:{{[0-9]+}}:17: error: cannot parse operand
; CHECK-NEXT:    ptr.add       42, r2, stack+=[r3 + 1]
; CHECK-NEXT:                  ^
; CHECK:       <stdin>:{{[0-9]+}}:17: error: cannot parse operand
; CHECK-NEXT:    ptr.add       code[r1 + 1], r2, stack+=[r3 + 1]
; CHECK-NEXT:                  ^
; CHECK:       <stdin>:{{[0-9]+}}:17: error: cannot parse operand
; CHECK-NEXT:    ptr.sub       42, r2, r3
; CHECK-NEXT:                  ^
; CHECK:       <stdin>:{{[0-9]+}}:17: error: cannot parse operand
; CHECK-NEXT:    ptr.sub       code[r1 + 1], r2, r3
; CHECK-NEXT:                  ^
; CHECK:       <stdin>:{{[0-9]+}}:17: error: cannot parse operand
; CHECK-NEXT:    ptr.shrink    42, r2, r3
; CHECK-NEXT:                  ^
; CHECK:       <stdin>:{{[0-9]+}}:17: error: cannot parse operand
; CHECK-NEXT:    ptr.shrink    code[r1 + 1], r2, r3
; CHECK-NEXT:                  ^
; CHECK:       <stdin>:{{[0-9]+}}:17: error: cannot parse operand
; CHECK-NEXT:    ptr.pack      42, r2, r3
; CHECK-NEXT:                  ^
; CHECK:       <stdin>:{{[0-9]+}}:17: error: cannot parse operand
; CHECK-NEXT:    ptr.pack      code[r1 + 1], r2, r3
; CHECK-NEXT:                  ^
